--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,3 +9,5 @@
 <p>
   Description: <%= @article.description %>
 </p>
+
+<%= link_to "edit", edit_article_path(@article) %> | <%= link_to "list", articles_path %>
