Partial views + destroy action

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,4 @@
   home
 </h1>
 
-
-<!-- Se que tengo que poner about_path porque lo veo ejecutando rake routes -->
-<%= link_to 'About', about_path %></%>
+<%= link_to 'Alpha Blog', articles_path %></%> | <%= link_to 'About', about_path %></%>
