--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -3,34 +3,4 @@
 </p>
 
 
-<% if @article.errors.any? %>
-  <p>
-    The new article has errors
-  </p>
-  <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-      <li>
-        <%= msg %>
-      </li>
-      <% end %>
-  </ul>
-<% end %>
-
-
-<%= form_for @article do |f| %>
-  <p>
-    <%= f.label :title %>
-      <br/>
-      <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :description %>
-      <br/>
-      <%= f.text_area :description %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
-
-<%= link_to "list", articles_path %>
+<%= render 'form' %>
