--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,4 @@
-<h1>
-  home
-</h1>
-
-<%= link_to 'Alpha Blog', articles_path %></%> | <%= link_to 'About', about_path %></%>
+<div class="center jumbotron">
+  <h1>home</h1>
+  <%= link_to "Sing in", "#", class: "btn btn-primary btn-lg" %>
+</div>
