--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,11 +11,17 @@
   <tr>
     <th>Title</th>
     <th>Description</th>
+    <th>User</th>
+    <th>Created</th>
+    <th>Updated</th>
   </tr>
   <% @articles.each do |art| %>
     <tr>
       <td><%= art.title %></td>
-      <td><%= art.description %></td>      
+      <td><%= truncate(art.description, length: 20) %></td>      
+      <td><%= art.user.username %></td>
+      <td><%= time_ago_in_words(art.created_at) %></td>
+      <td><%= time_ago_in_words(art.updated_at) %></td>
       <td><%= link_to 'Edit', edit_article_path(art) %></td>
       <td><%= link_to 'Show', article_path(art) %></td>
       <td><%= link_to 'Delete', article_path(art), method: :delete, data: { confirm: "Are you sure?" } %></td>
