--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,6 +6,9 @@
   <%= link_to "create new", new_article_path %>  
 </p>
 
+<div align="center">
+  <%= will_paginate %>  
+</div>
 
 <table>
   <tr>
@@ -28,3 +31,8 @@
   </tr>
   <% end %>
 </table>
+
+
+<div align="center">
+  <%= will_paginate %>  
+</div>
